--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "planflowpro",
-  "homepage": "https://phongchau120498-svg.github.io/planflowpro",
+  "name": "PlanFlowPro",
+  "homepage": "https://phongchau120498-svg.github.io/PlanFlowPro",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
